augmented view - added more pages; memcached

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ South==0.8.1
 argparse==1.2.1
 distribute==0.6.34
 dj-database-url==0.2.1
+django-pylibmc-sasl==0.2.4
 gunicorn==17.5
 psycopg2==2.5.1
+pylibmc==1.2.3
 wsgiref==0.1.2
